# python-blueprint

./: .coveragerc  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
blueprint/: __main__.py  app.py  main.py
tests/: test_app.py  test_main.py
