[tool.poetry]
name = "blueprint"
version = "0.1.0"
description = "Description goes here"
authors = ["Alex M <alex@mosstech.io>"]

[tool.poetry.scripts]
deduplicator = "blueprint.main:app"

[tool.poetry.dependencies]
python = "^3.9"
python-json-logger = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
